--- a/new.html
+++ b/new.html
@@ -8,8 +8,9 @@
       body {
         margin: 0;
       }
-      <h1>新页面</h1>  
-      </body>
     </style>
   </head>
+  <body>
+    <h1>新页面</h1>
+  </body>
 </html>
